# src/docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  dto.GetOtpRequest:
+    properties:
+      mobileNumber:
+        maxLength: 11
+        minLength: 11
+        type: string
+    required:
+    - mobileNumber
+    type: object
   helper.BaseHttpResponse:
     properties:
       error: {}
@@ -67,6 +76,32 @@ paths:
       summary: Health Check
       tags:
       - Health
+  /v1/users/send-otp:
+    post:
+      consumes:
+      - application/json
+      description: Send OTP to user
+      parameters:
+      - description: GetOtpRequest
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.GetOtpRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Success
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+        "409":
+          description: Failed
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+      summary: Send OTP to user
+      tags:
+      - Users
   /v2/test/user/{id}:
     post:
       consumes:
